load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "core",
    srcs = [
        "context.go",
        "network.go",
        "node_utils.go",
        "nodes.go",
        "tag.go",
        "time.go",
    ],
    importpath = "github.com/stanford-ppl/DAM/core",
    visibility = ["//visibility:public"],
    deps = [
        "//datatypes",
        "//utils",
    ],
)

go_test(
    name = "core_test",
    size = "small",
    srcs = ["core_test.go"],
    embed = [":core"],
    deps = ["//datatypes"],
)
