load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "core",
    srcs = [
        "context.go",
        "logging.go",
        "network.go",
        "nodes.go",
        "nodeutils.go",
        "tag.go",
        "time.go",
    ],
    importpath = "github.com/stanford-ppl/DAM/core",
    visibility = ["//visibility:public"],
    deps = [
        "//datatypes",
        "//utils",
        "@org_uber_go_zap//:zap",
    ],
)

go_test(
    name = "core_test",
    size = "small",
    srcs = ["core_test.go"],
    embed = [":core"],
    deps = ["//datatypes"],
)

go_test(
    name = "time_test",
    size = "small",
    srcs = ["time_test.go"],
    embed = [":core"],
    deps = ["//datatypes"],
)
