load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "base",
    srcs = ["base.go"],
    importpath = "github.com/stanford-ppl/DAM/datatypes/base",
    visibility = ["//visibility:public"]
)

go_library(
    name = "fixed",
    srcs = ["fixed.go"],
    importpath = "github.com/stanford-ppl/DAM/datatypes/fixed",
    visibility = ["//visibility:public"],
)

go_test(
    name = "datatypes_test",
    srcs = ["datatypes_test.go"],
    embed = [":fixed"],
    size="small"
)
