load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "vector",
    srcs = [
        "vector.go"
    ],
    importpath = "github.com/stanford-ppl/DAM/vector",
    visibility = ["//visibility:public"],
    deps = ["//datatypes:base"]
)

go_test(
    name = "vector_test",
    srcs = ["vector_test.go"],
    deps = ["//datatypes:fixed"],
    embed = [":vector"],
    size="small"
)