load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "hogmild",
    srcs = [
        "hogmild.go",
        "params_server.go",
        "worker.go",
    ],
    importpath = "github.com/stanford-ppl/DAM/apps/hogmild",
    visibility = ["//visibility:public"],
    deps = [
        "//core",
        "//datatypes",
    ],
)

go_test(
    name = "hogmild_test",
    size = "small",
    srcs = ["hogmild_test.go"],
    embed = [":hogmild"],
)
