load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_test")

go_binary(
    name = "hogmild",
    srcs = [
        "hogmild.go",
        "params_server.go",
        "worker.go",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//core",
        "//datatypes",
    ],
)

go_test(
    name = "hogmild_test",
    size = "small",
    srcs = [
        "hogmild.go",
        "hogmild_test.go",
        "params_server.go",
        "worker.go",
    ],
    deps = [
        "//core",
        "//datatypes",
    ],
)
