load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "blas",
    srcs = ["matrix.go"],
    cdeps = ["//libs/blas/c:blas"],
    cgo = True,
    importpath = "github.com/stanford-ppl/DAM/libs/blas",
    visibility = ["//visibility:public"],
)

go_test(
    name = "matrix_test",
    size = "small",
    timeout = "short",
    srcs = ["matrix_test.go"],
    embed = [":blas"],
)

