load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "plasticine",
    srcs = ["PMU.go"],
    importpath = "github.com/stanford-ppl/DAM/templates/plasticine",
    visibility = ["//visibility:public"],
    deps = [
        "//core",
        "//datatypes",
        "//utils",
    ],
)
