load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "internal",
    srcs = [
        "PMU_datastore.go",
        "PMU_internals.go",
    ],
    importpath = "github.com/stanford-ppl/DAM/templates/plasticine/internal",
    visibility = ["//templates/plasticine:__subpackages__"],
    deps = [
        "//core",
        "//datatypes",
        "//utils",
        "@imath//ix",
    ],
)
