load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "internal",
    srcs = [
        "PMU_datastore.go",
        "PMU_internals.go",
    ],
    importpath = "github.com/stanford-ppl/DAM/templates/plasticine/internal",
    visibility = ["//templates/plasticine:__subpackages__"],
    deps = [
        "//core",
        "//datatypes",
        "//utils",
        "@imath//ix",
        "//templates/shared/accesstypes:accesstypes"
    ],
)

go_test(
    name = "internal_test",
    srcs = ["PMU_internals_test.go"],
    embed = [":internal"],
    deps = [
        "//core",
        "//utils",
    ],
)
